# rosplan_demos

./: .gitignore  .travis.yml  LICENSE  README.md
.github/workflows/: build.yml
rosplan_common_demos/: CMakeLists.txt  package.xml
rosplan_demo_stage/: CMakeLists.txt  README.md  package.xml
rosplan_demo_stage/config/: costmap_common_params_waffle.yaml  hidden_costmap_1.yaml  hidden_costmap_lt13.yaml  hidden_costmap_simple_house.yaml  turtlebot3.rviz  turtlebot_stage_sensing.yaml
rosplan_demo_stage/launch/: lt13.launch  lt13_filtering.launch  simple_house_filtering.launch
rosplan_demo_stage/pddl/: domain_turtlebot_demo.pddl  problem.pddl  problem_turtlebot_demo.pddl  results.csv
rosplan_demo_stage/scripts/: filter_explore_common.bash  main_executor.py  sampling_sensing_functions.py  waypoint_sample_testing.bash
rosplan_demo_stage/world/: lt13.pgm  lt13.world  simple_house.pgm  simple_house.world
rosplan_demos/: CMakeLists.txt
rosplan_demos/common/: domain_turtlebot.pddl  problem_turtlebot.pddl
rosplan_demos/launch/: simulated_actions.launch
rosplan_demos_interfaces/rosplan_demos_interfaces/: CMakeLists.txt  package.xml
rosplan_demos_interfaces/rosplan_interface_mapping/: CMakeLists.txt  README.md  package.xml
rosplan_demos_interfaces/rosplan_interface_mapping/include/rosplan_interface_mapping/: RPRoadmapFilter.h  RPRoadmapServer.h  RPSimpleMapServer.h
rosplan_demos_interfaces/rosplan_interface_mapping/launch/: rosplan_roadmap_server.launch
rosplan_demos_interfaces/rosplan_interface_mapping/src/: HiddenCostPublisher.py  RPRoadmapFilter.cpp  RPRoadmapServer.cpp  RPSimpleMapServer.cpp
rosplan_demos_interfaces/rosplan_interface_mapping/srv/: AddWaypoint.srv
rosplan_demos_interfaces/rosplan_interface_movebase/: CMakeLists.txt
rosplan_demos_interfaces/rosplan_interface_movebase/include/rosplan_interface_movebase/: RPMoveBase.h
rosplan_demos_interfaces/rosplan_interface_movebase/src/: RPMoveBase.cpp
rosplan_demos_interfaces/rosplan_interface_movebase_py/: CMakeLists.txt  README.md  package.xml  setup.py
rosplan_demos_interfaces/rosplan_interface_movebase_py/launch/: rosplan_interface_movebase_py_demo.launch
rosplan_demos_interfaces/rosplan_interface_movebase_py/scripts/: rpmovebase
rosplan_demos_interfaces/rosplan_interface_movebase_py/src/rosplan_interface_movebase_py/: rosplan_interface_movebase.py
rosplan_planner_interfaces/: CMakeLists.txt  package.xml
rosplan_planner_interfaces/launch/: ffha_planner_interface.launch
rosplan_stage_demo/: CMakeLists.txt  README.md  package.xml
rosplan_stage_demo/config/: costmap_common_params_waffle.yaml  hidden_costmap_lt13.yaml  local_costmap_params.yaml  rosplan_stage_demo.rviz  rosplan_stage_demo_multirobot.rviz  turtlebot_stage_sensing.yaml
rosplan_stage_demo/launch/: empty_stage.launch  empty_stage_multi_robot.launch  empty_stage_no_navigation.launch  empty_stage_no_rviz.launch  empty_stage_single_robot.launch  lt13_filtering.launch  maze1_filtering.launch  multirobot.launch  robot.launch
rosplan_stage_demo/maps/: lt13.yaml  simple_house.yaml
rosplan_stage_demo/scripts/: filter_explore_common.bash  filter_explore_simple_house.bash
rosplan_stage_demo/world/: simple_house.world  simple_house_2robots.world
rosplan_stage_exploration_demo/: CMakeLists.txt  README.md  package.xml
rosplan_stage_exploration_demo/config/: action_config.yaml  action_config_multirobot.yaml  exploration.rviz  exploration_multirobot.rviz  exploration_sampling.rviz  sensing_config.yaml  sensing_config_multirobot.yaml
rosplan_stage_exploration_demo/launch/: exploration.launch  exploration_multi_robot.launch  lt13_exploration.launch  lt14_exploration_robot.launch  lt14_exploration_robot_sampling.launch
rosplan_stage_exploration_demo/pddl/: domain_turtlebot_demo.pddl  domain_turtlebot_demo_multirobot.pddl  exploration_plan.dot  problem_turtlebot_demo_multirobot.pddl
rosplan_stage_exploration_demo/scripts/: exploration_sensing_functions.py  exploration_sensing_functions_sampling.py  graph_saver.py  main_executor.py  main_executor_multirobot.py  main_executor_sampling.py
rosplan_stage_exploration_demo_multirobot/: CMakeLists.txt  package.xml
rosplan_stage_exploration_demo_multirobot/config/: exploration_sampling.rviz  sensing_config.yaml  sensing_config_sampling.yaml
rosplan_stage_exploration_demo_multirobot/launch/: lt13_exploration.launch  lt14_exploration_robot_sampling.launch  test.launch  two_robots.launch
rosplan_stage_exploration_demo_multirobot/pddl/: exploration_plan.dot  generated_problem.pddl  plan.pddl
rosplan_stage_exploration_demo_multirobot/scripts/: exploration_sensing_functions.py  main_executor.py  main_executor_sampling.py
rosplan_stage_waypoint_demo/: CMakeLists.txt  README.md  package.xml
rosplan_stage_waypoint_demo/config/: turtlebot_stage_sensing.yaml  waypoint_sampling.rviz
rosplan_stage_waypoint_demo/launch/: lt13_sampling.launch  lt13_sampling_experiment.launch  waypoint_sampling.launch
rosplan_stage_waypoint_demo/pddl/: generated_problem.pddl  plan.pddl  results.csv
rosplan_stage_waypoint_demo/scripts/: main_executor.py  sampling_sensing_functions.py
rosplan_turtlebot2_demo/: CMakeLists.txt  README.md
rosplan_turtlebot2_demo/common/: README.md
rosplan_turtlebot2_demo/config/: turtlebot2.rviz  waypoints.yaml
rosplan_turtlebot2_demo/launch/: turtlebot.launch
rosplan_turtlebot3_demo/: CMakeLists.txt  README.md  package.xml
rosplan_turtlebot3_demo/common/: .gitignore  README.md  unsolvable_problem.pddl
rosplan_turtlebot3_demo/config/: turtlebot3.rviz
rosplan_turtlebot3_demo/launch/: turtlebot.launch  turtlebot3_bringup_sim.launch
rosplan_turtlebot3_demo/scripts/: turtlebot_explore.bash  turtlebot_explore_common.bash  turtlebot_explore_wp_from_file.bash
rosplan_waypoint_demo/: CMakeLists.txt  README.md  package.xml
rosplan_waypoint_demo/config/: turtlebot_stage_sensing.yaml  waypoint_sampling.rviz
rosplan_waypoint_demo/launch/: lt13_filtering.launch  lt13_sampling.launch  lt13_sampling_experiment.launch  simple_house_filtering.launch
(+3 files in other folders)
