<?xml version="1.0"?>
<package>
  <name>rosplan_stage_demo</name>
  <version>1.0.0</version>
  <description>
    Simple simulation of a robot in stage, for use with other ROSPlan demos.
  </description>
  <maintainer email="michael.cashmore@kcl.ac.uk">Michael Cashmore</maintainer>

  <license>BSD</license>
  <url type="website">http://github.com/KCL-Planning/rosplan_demos</url>
  <author email="michael.cashmore@kcl.ac.uk">Michael Cashmore</author>

  <buildtool_depend>catkin</buildtool_depend>

	<run_depend>move_base_msgs</run_depend>
	<run_depend>turtlebot3_navigation</run_depend>
	<run_depend>dwa_local_planner</run_depend>
</package>
