<?xml version="1.0"?>
<package>
  <name>rosplan_waypoint_demo</name>
  <version>1.0.0</version>
  <description>
    Extends rosplan_stage_demo, a simulation of a robot in STAGE. This demo includes the planning problem of inspecting a number of objects that belong to specific inspection missions. The ROB-IS package is used to perform task-aware waypoint sampling.
  </description>
  <maintainer email="michael.cashmore@kcl.ac.uk">Michael Cashmore</maintainer>

  <license>BSD</license>
  <url type="website">http://github.com/KCL-Planning/rosplan_demos</url>
  <author email="michael.cashmore@kcl.ac.uk">Michael Cashmore</author>
  <author email="michael.cashmore@kcl.ac.uk">Gerard Canal</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
